feat: user can click around and save chords

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,17 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1 class="font--red">Rechorder 🎸</h1>
+      <section>
+        <h2 class="font--blue">What's this chord? <span id="chord" class="font--black">🤔</span></h2>
+        <figure id="fretboard"></figure>
+        <div class="button-box">
+          <button class="button--orange" id="clear">Clear</button>
+          <button id="rechord">Rechord</button>
+        </div>
+      </section>
+      <section id="rechordings"></section>
+    </div>
   </body>
 </html>
